--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "mui-datatables": "^3.7.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
