--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "remark-gfm": "^1.0.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "zustand": "^3.1.4"
@@ -32,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile": "tsc"
   },
   "eslintConfig": {
     "extends": [
