--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "format": "prettier --write '**/*.{ts,tsx,js,scss,html}'",
     "compile": "tsc"
   },
   "eslintConfig": {
@@ -54,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.1.2"
   }
 }
