--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
+    "framer-motion": "^2.9.4",
     "immer": "^7.0.14",
     "mui-datatables": "^3.7.1",
     "node-sass": "4.14.1",
